--- a/ghost/Makefile
+++ b/ghost/Makefile
@@ -2,9 +2,11 @@ SHELL = /bin/sh
 SYSTEM = $(shell uname)
 C++ = g++
 CC = gcc
-DFLAGS = -DGHOST_MYSQL
+DFLAGS =
+# -DGHOST_MYSQL
 OFLAGS = -O3
-LFLAGS = -L. -L../bncsutil/src/bncsutil/ -L../StormLib/stormlib/ -lbncsutil -lpthread -ldl -lz -lStorm -lmysqlclient -lboost_date_time -lboost_thread -lboost_system -lboost_filesystem -lgmp
+LFLAGS = -L. -L../bncsutil/src/bncsutil/ -L../StormLib/stormlib/ -lbncsutil -lpthread -ldl -lz -lStorm -lboost_date_time -lboost_thread -lboost_system -lboost_filesystem -lgmp
+# -lmysqlclient
 CFLAGS =
 
 ifeq ($(SYSTEM),Darwin)
@@ -36,8 +38,8 @@ PROGS = ./ghost++
 all: $(OBJS) $(COBJS) $(PROGS)
 
 ./ghost++: $(OBJS) $(COBJS)
-	$(C++) -o ./ghost++ $(OBJS) $(COBJS) $(LFLAGS)
-
+	$(C++) -o ./ghost.exe $(OBJS) $(COBJS) $(LFLAGS)
+#./ghost++
 clean:
 	rm -f $(OBJS) $(COBJS) $(PROGS)
 
