--- a/ghost/ghost.vcxproj
+++ b/ghost/ghost.vcxproj
@@ -225,8 +225,8 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>ws2_32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(BONJOUR_SDK_HOME)\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>ws2_32.lib;winmm.lib;dnssd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(BONJOUR_SDK_HOME)\Lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
@@ -329,6 +329,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="base64.cpp" />
     <ClCompile Include="bncsutilinterface.cpp" />
     <ClCompile Include="bnet.cpp" />
     <ClCompile Include="bnetprotocol.cpp" />
@@ -364,11 +365,13 @@
     <ClCompile Include="util.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="base64.h" />
     <ClInclude Include="bncsutilinterface.h" />
     <ClInclude Include="bnet.h" />
     <ClInclude Include="bnetprotocol.h" />
     <ClInclude Include="bnlsclient.h" />
     <ClInclude Include="bnlsprotocol.h" />
+    <ClInclude Include="bonjour.h" />
     <ClInclude Include="commandpacket.h" />
     <ClInclude Include="config.h" />
     <ClInclude Include="crc32.h" />
