--- a/ghost/ghost.vcxproj.filters
+++ b/ghost/ghost.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="consolecommand.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ghostw3hmc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bncsutilinterface.h">
@@ -237,6 +240,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="consolecommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ghostw3hmc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
